# monorepo-template

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/api/: db.py  main.py  settings.py
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx
docker/: api.Dockerfile  nginx.conf  web.Dockerfile
docs/: getting-started-ja.md
